istio/1.http-gw/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: simple
  namespace: simple
spec:
  selector:
    istio: ingressgateway  #语义：往打了istio: ingressgateway标签的pod上插入一些规则
  servers:
    - hosts:
        - simple.http.io
      port:
        name: http-simple
        number: 8088
        protocol: HTTP
